--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>転職系サイト開発事例</title>
+  <title>転職系サイト練習</title>
   <link rel="stylesheet" href="./css/normalize.css" />
   <!-- 先引入css文件 放到自己css文件的上面 -->
   <link rel="stylesheet" href="./css/swiper.min.css" />
@@ -14,7 +14,7 @@
 <body>
   <section class="warp">
     <!-- 头部区域 -->
-    <header class="header"><span>転職系サイト開発事例様式</span><br><span>2025年1月24陳奎祥</span></header>
+    <header class="header"><span>転職系サイト練習</span><br><span>2025年1月24陳奎祥</span></header>
     <!-- 导航栏部分 -->
     <nav class="nav">
       <a href="#" class="item">
